presenter css fix: position for align

--- a/presenter.css
+++ b/presenter.css
@@ -71,20 +71,16 @@ code {
   position: relative;
   color: #ffffff;
   width: 90vw;
-  /*
-  min-width: 90vw;
-  max-width: 90vw;
-  */
   max-height: 90vh;
   padding: 5vh 5vw;
   font-size: 8.75vh;
   line-height: 1.4;
 }
 .top {
-  top: -25vh;
+  top: -26.625vh;
 }
 .bottom {
-  bottom: -25vh;
+  bottom: -26.625vh;
 }
 .left {
   text-align: left;
